# ArgOS-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  url_test.rs
.atl/: .skill-registry.cache.json  skill-registry.md
.cargo/: config.toml
.github/workflows/: ci.yml
argos-agent/: Cargo.toml
argos-agent/src/: agent.rs  generic_agent.rs  lib.rs  registry.rs  test_support.rs
argos-agent/tests/: integration_real_llm.rs
argos-cli/: Cargo.toml
argos-cli/src/: cli.rs  lib.rs  main.rs
argos-cli/src/commands/: ask.rs  mod.rs  n8n.rs  wiki.rs  workflow.rs
argos-cli/tests/: e2e_cli.rs
argos-core/: Cargo.toml
argos-core/src/: agent.rs  common.rs  config.rs  error.rs  lib.rs  n8n.rs  okf.rs
argos-knowledge/: Cargo.toml
argos-knowledge/src/: bundle.rs  ingest.rs  lib.rs  links.rs  lint.rs  parser.rs  query.rs  raw.rs  reindex.rs  schema.rs  test_support.rs
argos-lib/: Cargo.toml
argos-lib/src/: lib.rs
argos-mcp/: Cargo.toml
argos-mcp/src/: client.rs  client_impl.rs  lib.rs  n8n_adapter.rs  protocol.rs  server.rs  server_impl.rs  transport.rs  types.rs
argos-n8n-connector/: Cargo.toml
argos-n8n-connector/src/: client.rs  connector.rs  exporter.rs  importer.rs  lib.rs  rest.rs  runner.rs  test_support.rs
argos-n8n-connector/tests/: integration_real_n8n.rs
argos-provider/: Cargo.toml
argos-provider/src/: aisdk_provider.rs  lib.rs  ollama.rs  openai_compatible.rs  provider.rs
argos-provider/tests/: codex_provider_e2e.rs  httpmock_integration.rs
argos-security/: Cargo.toml
argos-security/src/: audit.rs  lib.rs  permission.rs  traits.rs  vault.rs
argos-storage/: Cargo.toml
argos-storage/src/: blob.rs  lib.rs  sqlite.rs  traits.rs  vector.rs
argos-tui/: Cargo.toml
argos-tui/src/: action.rs  app.rs  commands.rs  composer.rs  event.rs  keymap.rs  lib.rs  main.rs  runtime.rs  services.rs  state.rs  ui.rs
argos-tui/tests/: integration_real_n8n.rs
argos-ui/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
argos-ui/src/: App.tsx  backend.rs  index.css  main.rs  services.rs
argos-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
argos-ui/src-tauri/capabilities/: default.json
argos-ui/src-tauri/icons/: icon.icns
argos-ui/src-tauri/src/: lib.rs  main.rs
argos-ui/src/components/: Icon.tsx  ProviderForm.tsx  ProviderGrid.tsx  Toast.tsx
argos-ui/src/lib/: tauri.ts
argos-ui/src/types/: provider.ts
argos-ui/src/workspace/: mod.rs  state.rs  view.rs
argos-wasm/: Cargo.toml
argos-wasm/src/: lib.rs  runtime.rs
argos-workflow-intelligence/: Cargo.toml
argos-workflow-intelligence/src/: crosslinks.rs  lib.rs  recommend.rs  reindexer.rs  similarity.rs  test_support.rs  vectorizer.rs
tests/codex-e2e/: codex-login.js
