[workspace]
resolver = "2"
members = [
    "argos-core",
    "argos-storage",
    "argos-knowledge",
    "argos-n8n-connector",
    "argos-workflow-intelligence",
    "argos-agent",
    "argos-provider",
    "argos-security",
    "argos-mcp",
    "argos-cli",
    "argos-lib",
    "argos-wasm",
    "argos-ui",
    "argos-tui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RDaniloMM/ArgOS-AI"
rust-version = "1.75"

# Shared dependencies inherited by member crates via `dep.workspace = true`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
toml = "0.8"
async-trait = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
# rustls-tls (no native-tls) keeps reqwest off link.exe on Windows GNU.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# OS keyring backend (feature-gated per crate); windows-sys needs no extra linker.
keyring = { version = "3", features = ["windows-native"] }
# OKF bundle directory traversal (argos-knowledge) and link/wikilink parsing.
walkdir = "2"
regex = "1"
# CLI argument parsing (argos-cli).
clap = { version = "4", features = ["derive"] }
# WASM extension sandbox (argos-wasm, Tier-3, deferred in slice 1).
wasmtime = { version = "45", default-features = false }
# E2E/CLI integration tests.
assert_cmd = "2"
predicates = "3"
