[package]
name = "argos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types for ArgOS — the shared vocabulary crate"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
toml = { workspace = true }
