[package]
name = "argos-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OKF bundle management — concept CRUD, frontmatter parsing, cross-links, typed relations, LLM-Wiki ingest/query/lint"

[dependencies]
argos-core = { path = "../argos-core" }
# Provider trait backs the LLM-Wiki ingest/query operations (ADR-010). Default
# features pull in no reqwest, so the crate stays network-free for tests.
argos-provider = { path = "../argos-provider" }
# VectorStore trait backs the reindex operation (ADR-002 / ADR-008).
argos-storage = { path = "../argos-storage" }
serde = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `#[tokio::test]` drives the async ingest/query operations; async-trait backs
# the in-test `StubProvider` impl of the `Provider` trait.
tokio = { workspace = true }
async-trait = { workspace = true }
