[package]
name = "argos-n8n-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bidirectional n8n connector — discover, import, export, execute-by-delegation, run mirroring"

[dependencies]
argos-core = { path = "../argos-core" }
# BundleStore backs the workflow importer (n8n workflows → OKF concepts).
argos-knowledge = { path = "../argos-knowledge" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
# Timestamps on imported workflow concepts.
chrono = { workspace = true }
# UUID generation for stub workflow/run IDs.
uuid = { workspace = true }
# Production HTTP backend is feature-gated so the default build + test suite
# stay network-free and avoid native-TLS/linker risk on Windows GNU. The
# `N8nClient` trait is the seam; production enables `reqwest-backend`.
reqwest = { workspace = true, optional = true }
# `tokio::time::sleep` is used in run_workflow (feature-gated) to wait for n8n
# to register an execution after a webhook trigger. Under the default feature
# set this is dead code; under `reqwest-backend` it is required.
tokio = { workspace = true, optional = true }

[features]
default = []
reqwest-backend = ["reqwest", "tokio"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
