[package]
name = "argos-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-negotiated LLM provider abstraction for ArgOS"

[dependencies]
argos-core = { path = "../argos-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
