[package]
name = "argos-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-negotiated LLM provider abstraction for ArgOS"

[dependencies]
argos-core = { path = "../argos-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
# Production HTTP backend is feature-gated so the default build + test suite
# stay network-free and avoid native-TLS/linker risk on Windows GNU. The
# `HttpClient` trait is the seam; production enables `reqwest-backend`.
reqwest = { workspace = true, optional = true }

[features]
default = []
reqwest-backend = ["reqwest"]

[dev-dependencies]
tokio = { workspace = true }
