[package]
name = "argos-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-negotiated LLM provider abstraction for ArgOS"

[dependencies]
argos-core = { path = "../argos-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
aisdk = { version = "0.5.2", features = ["openai", "openaicompatible", "language-model-request", "embedding-model-request"] }
uuid = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
httpmock = "0.7"
