[package]
name = "argos-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-cutting security traits for ArgOS — permissions, secrets, audit"

[dependencies]
argos-core = { path = "../argos-core" }
async-trait = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
