[package]
name = "argos-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ArgOS desktop UI (Iced)"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "wgpu", "svg"] }
resvg = "0.45"
tiny-skia = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = "5"
toml = { workspace = true }
argos-core = { path = "../argos-core" }
argos-security = { path = "../argos-security", features = ["keyring-backend"] }
argos-lib = { path = "../argos-lib" }
argos-agent = { path = "../argos-agent" }
argos-n8n-connector = { path = "../argos-n8n-connector", features = ["reqwest-backend"] }
argos-provider = { path = "../argos-provider" }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
